A bit more sonar advised cleanup.