@@ -31,7 +31,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.commons.lang3.StringUtils;
 import org.broadinstitute.consent.http.cloudstore.GCSService;
@@ -65,7 +64,6 @@ public class DataAccessRequestResource extends Resource {
   private final DaaService daaService;
   private final DataAccessRequestService dataAccessRequestService;
   private final DarCollectionService darCollectionService;
-  private final EmailService emailService;
   private final GCSService gcsService;
   private final MatchService matchService;
   private final UserService userService;
@@ -75,7 +73,6 @@ public class DataAccessRequestResource extends Resource {
   public DataAccessRequestResource(
       DaaService daaService,
       DataAccessRequestService dataAccessRequestService,
-      EmailService emailService,
       GCSService gcsService,
       UserService userService,
       DatasetService datasetService,
@@ -84,7 +81,6 @@ public class DataAccessRequestResource extends Resource {
   ) {
     this.daaService = daaService;
     this.dataAccessRequestService = dataAccessRequestService;
-    this.emailService = emailService;
     this.gcsService = gcsService;
     this.userService = userService;
     this.datasetService = datasetService;
@@ -161,8 +157,7 @@ public class DataAccessRequestResource extends Resource {
   public Response getByReferenceId(
       @Auth AuthUser authUser, @PathParam("referenceId") String referenceId) {
     validateAuthedRoleUser(
-        Stream.of(UserRoles.ADMIN, UserRoles.CHAIRPERSON, UserRoles.MEMBER)
-            .collect(Collectors.toList()),
+        Stream.of(UserRoles.ADMIN, UserRoles.CHAIRPERSON, UserRoles.MEMBER).toList(),
         authUser, referenceId);
     try {
       DataAccessRequest dar = dataAccessRequestService.findByReferenceId(referenceId);
@@ -188,8 +183,7 @@ public class DataAccessRequestResource extends Resource {
       @Auth AuthUser authUser, @PathParam("referenceId") String referenceId) {
     try {
       validateAuthedRoleUser(
-          Stream.of(UserRoles.ADMIN, UserRoles.CHAIRPERSON, UserRoles.MEMBER)
-              .collect(Collectors.toList()),
+          Stream.of(UserRoles.ADMIN, UserRoles.CHAIRPERSON, UserRoles.MEMBER).toList(),
           authUser, referenceId);
       List<DataAccessAgreement> dataAccessAgreements = daaService.findByDarReferenceId(referenceId);
       return Response.status(Response.Status.OK).entity(dataAccessAgreements).build();
@@ -356,8 +350,7 @@ public class DataAccessRequestResource extends Resource {
     try {
       DataAccessRequest dar = getDarById(referenceId);
       validateAuthedRoleUser(
-          Stream.of(UserRoles.ADMIN, UserRoles.CHAIRPERSON, UserRoles.MEMBER)
-              .collect(Collectors.toList()),
+          Stream.of(UserRoles.ADMIN, UserRoles.CHAIRPERSON, UserRoles.MEMBER).toList(),
           authUser, referenceId);
       if (dar.getData() != null &&
           StringUtils.isNotEmpty(dar.getData().getIrbDocumentLocation()) &&
@@ -494,8 +487,7 @@ public class DataAccessRequestResource extends Resource {
     try {
       DataAccessRequest dar = getDarById(referenceId);
       validateAuthedRoleUser(
-          Stream.of(UserRoles.ADMIN, UserRoles.CHAIRPERSON, UserRoles.MEMBER)
-              .collect(Collectors.toList()),
+          Stream.of(UserRoles.ADMIN, UserRoles.CHAIRPERSON, UserRoles.MEMBER).toList(),
           authUser, referenceId);
       if (dar.getData() != null &&
           StringUtils.isNotEmpty(dar.getData().getCollaborationLetterLocation()) &&
